D07+D11 cleanup + split (2023)